--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-<div id="root"></div>
-<script type="text/javascript" src="./build/bundle.js"></script>
-</body>
+  <head>
+    <title></title>
+    <link rel="stylesheet" href="./build/style.css" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <img src="" alt="" srcset="" />
+    <script type="text/javascript" src="./build/bundle.js"></script>
+  </body>
 </html>
